--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server"
+    "start": "hexo server",
+    "publish": "hexo clean && hexo generate && hexo deploy"
   },
   "hexo": {
     "version": "8.1.1"
