--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -1,24 +1,47 @@
-name: Deploy hexo blog
+name: CI
 
 on:
   push:
     branches:
-      - main
+      - develop
+
+env:
+  GIT_USER: gtx
+  GIT_EMAIL: xueyejiaren@sina.cn
+  DEPLOY_REPO: gutianxing/gutianxing.github.io
+  DEPLOY_BRANCH: main
 
 jobs:
   build:
+    name: Build on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [20.x]
+        os: [ubuntu-latest]
+        node_version: [16.x]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Checkout theme repo
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ env.THEME_REPO }}
+          ref: ${{ env.THEME_BRANCH }}
+          path: themes/concise
+
+      - name: Checkout deploy repo
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ env.DEPLOY_REPO }}
+          ref: ${{ env.DEPLOY_BRANCH }}
+          path: .deploy_git
+
+      - name: Use Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ matrix.node_version }}
 
       - name: Configuration environment
         env:
@@ -26,16 +49,17 @@ jobs:
         run: |
           sudo timedatectl set-timezone "Asia/Shanghai"
           mkdir -p ~/.ssh/
-          echo "$HEXO_DEPLOY_PRI" | tr -d '\r' > ~/.ssh/id_rsa
+          echo "$HEXO_DEPLOY_PRI" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git config --global user.name "gtx"
-          git config --global user.email "xueyejiaren@sina.cn"
+          git config --global user.name $GIT_USER
+          git config --global user.email $GIT_EMAIL
+          cp _config.theme.yml themes/concise/_config.yml
+
       - name: Install dependencies
         run: |
-          npm i -g hexo-cli
-          npm ci
+          npm install
+
       - name: Deploy hexo
         run: |
-          hexo clean
-          hexo d -g
+          npm run deploy
