--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,60 +1,60 @@
-name: CI
+# name: CI
 
-on:
-  push:
-    branches:
-      - develop
+# on:
+#   push:
+#     branches:
+#       - develop
 
-env:
-  GIT_USER: gtx
-  GIT_EMAIL: xueyejiaren@sina.cn
-  DEPLOY_REPO: gutianxing/gutianxing.github.io
-  DEPLOY_BRANCH: main
+# env:
+#   GIT_USER: gtx
+#   GIT_EMAIL: xueyejiaren@sina.cn
+#   DEPLOY_REPO: gutianxing/gutianxing.github.io
+#   DEPLOY_BRANCH: main
 
-jobs:
-  build:
-    name: Build on node ${{ matrix.node_version }} and ${{ matrix.os }}
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node_version: [24.x]
+# jobs:
+#   build:
+#     name: Build on node ${{ matrix.node_version }} and ${{ matrix.os }}
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         os: [ubuntu-latest]
+#         node_version: [24.x]
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
 
-      - name: Checkout theme repo
-        uses: actions/checkout@v4
+#       - name: Checkout theme repo
+#         uses: actions/checkout@v4
 
-      - name: Checkout deploy repo
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ env.DEPLOY_REPO }}
-          ref: ${{ env.DEPLOY_BRANCH }}
-          path: .deploy_git
+#       - name: Checkout deploy repo
+#         uses: actions/checkout@v4
+#         with:
+#           repository: ${{ env.DEPLOY_REPO }}
+#           ref: ${{ env.DEPLOY_BRANCH }}
+#           path: .deploy_git
 
-      - name: Use Node.js ${{ matrix.node_version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node_version }}
+#       - name: Use Node.js ${{ matrix.node_version }}
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: ${{ matrix.node_version }}
 
-      - name: Configuration environment
-        env:
-          HEXO_DEPLOY_PRI: ${{secrets.HEXO_DEPLOY_PRI}}
-        run: |
-          sudo timedatectl set-timezone "Asia/Shanghai"
-          mkdir -p ~/.ssh/
-          echo "$HEXO_DEPLOY_PRI" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git config --global user.name $GIT_USER
-          git config --global user.email $GIT_EMAIL
+#       - name: Configuration environment
+#         env:
+#           HEXO_DEPLOY_PRI: ${{secrets.HEXO_DEPLOY_PRI}}
+#         run: |
+#           sudo timedatectl set-timezone "Asia/Shanghai"
+#           mkdir -p ~/.ssh/
+#           echo "$HEXO_DEPLOY_PRI" > ~/.ssh/id_rsa
+#           chmod 600 ~/.ssh/id_rsa
+#           ssh-keyscan github.com >> ~/.ssh/known_hosts
+#           git config --global user.name $GIT_USER
+#           git config --global user.email $GIT_EMAIL
 
-      - name: Install dependencies
-        run: |
-          npm install
+#       - name: Install dependencies
+#         run: |
+#           npm install
 
-      - name: Deploy hexo
-        run: |
-          npm run publish
+#       - name: Deploy hexo
+#         run: |
+#           npm run publish
